fixed navigation overlap

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
 /* Links */
 a {
   color: inherit;
@@ -168,6 +173,16 @@ a.project__link {
 
 .projectSection {
   background-color: #345995;
+}
+
+.projectsContainer.container {
+  padding: 0 3em;
+}
+
+@media only screen and (max-width: 557px) {
+  .projectsContainer.container {
+    padding: 0 1em;
+  }
 }
 
 .projectCard {
